Fix zoom on Safari after selecting a race
Selectboxes must be 16px or greater

--- a/src/css/statePage.less
+++ b/src/css/statePage.less
@@ -108,7 +108,7 @@ header {
 
 .mobile-calendar {
   border: none;
-  font-size: 12px;
+  font-size: 16px;
   font-family: @gotham;
   background: transparent;
   width: 100%;
